--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column">
-          <img src="static/images/gendercare.pdf" alt="GenderCARE Framework" class="framework-image">
+          <img src="static/images/gendercare.png" alt="GenderCARE Framework" class="framework-image">
           <p class="has-text-justified" style="margin-top: 1rem;">
             The GenderCARE framework for comprehensive gender bias assessment and reduction in LLMs. It consists of four key components: (I) <strong>Criteria</strong> for gender equality benchmarks; (II) <strong>Assessment</strong> of gender bias in LLMs using the proposed GenderPair benchmark aligned with the criteria; (III) <strong>Reduction</strong> of gender bias via counterfactual data augmentation and fine-tuning strategies; (IV) <strong>Evaluation</strong> metrics at both lexical and semantic levels for bias quantification.
           </p>
