--- a/index.html
+++ b/index.html
@@ -216,19 +216,42 @@
     </div>
   </section>
 
-  <!-- Framework Overview -->
+  <!-- Framework Overview
   <section class="section framework-section">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column">
-          <img src="static/images/table_genderpair_examples.png" alt="GenderCARE Framework" class="framework-image">
+          <img src="static/images/gendercare.png" alt="GenderCARE Framework" class="framework-image">
           <p class="has-text-justified" style="margin-top: 1rem;">
             The GenderCARE framework for comprehensive gender bias assessment and reduction in LLMs. It consists of four key components: (I) <strong>Criteria</strong> for gender equality benchmarks; (II) <strong>Assessment</strong> of gender bias in LLMs using the proposed GenderPair benchmark aligned with the criteria; (III) <strong>Reduction</strong> of gender bias via counterfactual data augmentation and fine-tuning strategies; (IV) <strong>Evaluation</strong> metrics at both lexical and semantic levels for bias quantification.
           </p>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+
+  <!-- Framework Overview -->
+<section class="section framework-section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column">
+        <!-- 使用 iframe 嵌入 PDF -->
+        <div style="width: 100%; height: 600px; margin-bottom: 1rem;">
+          <iframe 
+            src="static/images/gendercare.pdf" 
+            width="100%" 
+            height="100%" 
+            style="border: 1px solid #ddd; border-radius: 4px;"
+            title="GenderCARE Framework">
+          </iframe>
+        </div>
+        <p class="has-text-justified" style="margin-top: 1rem;">
+          The GenderCARE framework for comprehensive gender bias assessment and reduction in LLMs. It consists of four key components: (I) <strong>Criteria</strong> for gender equality benchmarks; (II) <strong>Assessment</strong> of gender bias in LLMs using the proposed GenderPair benchmark aligned with the criteria; (III) <strong>Reduction</strong> of gender bias via counterfactual data augmentation and fine-tuning strategies; (IV) <strong>Evaluation</strong> metrics at both lexical and semantic levels for bias quantification.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Abstract -->
   <section class="section hero is-light">
