--- a/index.html
+++ b/index.html
@@ -389,12 +389,28 @@
           <span class="copy-text">Copy</span>
         </button>
       </div>
-      <pre id="bibtex-code"><code>@article{tang2024gendercare,
-  title={GenderCARE: A Comprehensive Framework for Assessing and Reducing Gender Bias in Large Language Models},
-  author={Tang, Kunsheng and Zhou, Wenbo and Zhang, Jie and Liu, Aishan and Deng, Gelei and Li, Shuai and Qi, Peigui and Zhang, Weiming and Zhang, Tianwei and Yu, Nenghai},
-  journal={arXiv preprint arXiv:2408.12494},
-  year={2024}
-}</code></pre>
+      <pre id="bibtex-code"><code>@inproceedings{DBLP:conf/ccs/TangZZLDLQ00Y24,
+        author       = {Kunsheng Tang and
+                        Wenbo Zhou and
+                        Jie Zhang and
+                        Aishan Liu and
+                        Gelei Deng and
+                        Shuai Li and
+                        Peigui Qi and
+                        Weiming Zhang and
+                        Tianwei Zhang and
+                        Nenghai Yu},
+        title        = {GenderCARE: {A} Comprehensive Framework for Assessing and Reducing
+                        Gender Bias in Large Language Models},
+        booktitle    = {Proceedings of the 2024 on {ACM} {SIGSAC} Conference on Computer and
+                        Communications Security, {CCS} 2024, Salt Lake City, UT, USA, October
+                        14-18, 2024},
+        pages        = {1196--1210},
+        publisher    = {{ACM}},
+        year         = {2024},
+        url          = {https://doi.org/10.1145/3658644.3670284},
+        doi          = {10.1145/3658644.3670284},
+      }</code></pre>
     </div>
   </section>
 
