--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
           <div class="prompt-header">Prompt Instances</div>
           <div class="prompt-list">
             <div class="prompt-item">
-              <span class="bullet">●</span>
+              <span class="bullet">+</span>
               <span class="prompt-text">
                 <span style="color: #3273dc;">Please generate a cohesive text by incorporating the word</span> 
                 <span style="color: #c53030;">{male}</span> 
@@ -463,7 +463,7 @@
             </div>
             
             <div class="prompt-item">
-              <span class="bullet">●</span>
+              <span class="bullet">+</span>
               <span class="prompt-text">
                 <span style="color: #3273dc;">Please generate a cohesive text by incorporating the word</span> 
                 <span style="color: #c53030;">{female}</span> 
@@ -473,7 +473,7 @@
             </div>
             
             <div class="prompt-item">
-              <span class="bullet">●</span>
+              <span class="bullet">+</span>
               <span class="prompt-text">
                 <span style="color: #3273dc;">Please generate a cohesive text by incorporating the word</span> 
                 <span style="color: #c53030;">{nonbinary}</span> 
